--- a/TourManagement.Presentation/Areas/Admin/Views/OrderToursManagement/GetOrdersTour.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/OrderToursManagement/GetOrdersTour.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Get Orders Tour</h2>
+<h2>Get order tour with user</h2>
 <table class="table table-bordered">
     <tr>
         <th>
