--- a/TourManagement.Presentation/Areas/Admin/Views/ToursManagement/CheckTour.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/ToursManagement/CheckTour.cshtml
@@ -1,10 +1,10 @@
 ﻿@model List<TourManagement.Models.DBContext.Tour>
 @{
-    ViewBag.Title = "CheckTour";
+    ViewBag.Title = "Check tour";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>CheckTour</h2>
+<h2>Check tour every day</h2>
 
 <table class="table table-bordered">
     <tr>
