done confirm orderded

--- a/TourManagement.Presentation/Areas/Admin/Views/OrderToursManagement/Orders.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/OrderToursManagement/Orders.cshtml
@@ -52,8 +52,17 @@
             var url = '@Url.Action("UpdateOrders", "OrderToursManagement")'
             url += '?orderTourId=' + orderid+'&status='+'Confirmed'
             $('#orderPending').load(url);
+            getData();
         })
-        getData()
+
+        $('#orderPending').on('click', '.btnDelete', function () {
+            const orderid = $(this).data('id')
+            var url = '@Url.Action("UpdateOrders", "OrderToursManagement")'
+            url += '?orderTourId=' + orderid+'&status='+'Cancel'
+            $('#orderPending').load(url);
+            getData();
+        })
+
     </script>
     
 }
